fix alignment

--- a/src/js/components/projects/project/style.scss
+++ b/src/js/components/projects/project/style.scss
@@ -50,7 +50,3 @@ $project-size: 250px;
 .project:hover .overlay {
   opacity: 1;
 }
-
-.project-wrapper {
-  text-align: center;
-}
